--- a/style/_modal.scss
+++ b/style/_modal.scss
@@ -2,7 +2,7 @@
 	position: fixed;
 	top: 0;
 	left: 0;
-	height: 100vh;
+	height: 100%;
 	width: 100%;
 	padding: 2.5rem;
 
@@ -16,6 +16,7 @@
 	backdrop-filter: blur(5px);
 
 	display: none;
+	overflow-y: scroll;
 
 	&.is-active {
 		display: flex;
@@ -100,7 +101,7 @@
 				width: 100%;
 			}
 
-			&:first-child {
+			&:first-of-type {
 				padding-right: 2rem;
 			}
 
