--- a/style/index.scss
+++ b/style/index.scss
@@ -231,6 +231,11 @@ nav {
 		padding: 25px 0;
 		z-index: 1;
 		position: relative;
+
+		@media screen and (max-width: 767px) {
+			text-shadow: 0px 1px 5px black, 0px 1px 10px black,
+				0px 1px 20px black;
+		}
 	}
 }
 
